11-12 header 배경&메뉴&타이틀&웹 폰트

--- a/필요이론.md
+++ b/필요이론.md
@@ -3,11 +3,17 @@
 
 # 🍕 피자모음 (필요 이론 모음집)
  
-🍕🍕🍕 웹 접근성 / 웹 표준<br>
+ <br><br>
+🍕🍕 웹 접근성과 웹 표준<br>
 [웹 접근성 연구소](https://www.wah.or.kr:444/) / [네이버 웹표준 '널리'](https://nuli.navercorp.com/) / [다음 웹표준 '다룸' (서비스종료)](http://darum.daum.net/)<br>
 웹 표준 : 장애인 차별 금지 법에 따라서 만들어짐<br>
 웹 접근성 : 모든 사람들이 정보통신 기기나 서비스를 손쉽게 활용할 수 있게 하는 것<br>
 따라서 사이트를 코딩할 때 웹 접근성과 표준을 맞춰서 만들어야 함<br>
+<br><br>
+
+🍕 웹폰트<br>
+구글폰트 사용
+[https://fonts.google.com/](https://fonts.google.com/)
 
 ## HTML
 
