--- a/필요이론.md
+++ b/필요이론.md
@@ -13,7 +13,17 @@
 
 🍕 웹폰트<br>
 구글폰트 사용
-[https://fonts.google.com/](https://fonts.google.com/)
+[https://fonts.google.com/](https://fonts.google.com/)<br>
+<br><br>
+
+🍕 이미지를 표현하는 방법<br>
+① img 태그로 표현 (의미가 있을 때) / alt 태그 - 대체 문자 표현<br>
+② background 속성으로 표현 (의미가 없을 때) - 대체 문자 X<br>
+③ 이미지를 background 속성 - 대신에 웹 표준을 준수하기 위해서 조건이 추가 : 가상으로 대체롤 문자를 만들어줌(IR 효과) + 이미지 스프라이트 효과<br>
+IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
+이미지 스프라이트 : 하나의 png 파일에 로고나 아이콘 같은 이미지들을 생성. 그 하나의 png 파일만 사용하며 position을 줘서 각각 불러옴<br>
+<br><br>
+
 
 ## HTML
 
