14-15 전체 메뉴/타이틀

--- a/필요이론.md
+++ b/필요이론.md
@@ -37,6 +37,19 @@ IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
 페이지 소스 볼 때 한글이 깨지지 않도록 css 파일에서 가장 상단에 적어줌<br>
 <br><br>
 
+🍕 `>`<br>
+바로 밑에 있는 자식만 사용할 때 사용<br>
+`.nav div {}` : nav 밑 div의 div등 모든 후손 div 선택<br>
+`.nav > div {}` : nav 바로 밑에 있는 div만 선택<br>
+<br><br>
+
+🍕 `float: left;`로 인한 영역깨짐(height:0) 방지법<br>
+① 깨지는 영역에 똑같이 float; left를 사용  --> 모든 박스에 float:left를 써줘야해서 비추<br>
+② float의 성질을 차단하는 `clear: both;`를 사용 --> 어떤 영역이 깨졌는지 찾기 어려워서 비추<br>
+③ float을 사용한 상위 박스한테` overflow: hidden;`을 사용 --> 제일 많이 사용하는 방법<br>
+④ clearfix 사용 --> 제일 best. 반응형에서 사용<br>
+⇒ `float: left;`를 사용했으면 부모한테 `overflow: hidden;`을 주는 습관을 가질 것<br>	
+<br><br>
 
 ## JQuery
 
