--- a/필요이론.md
+++ b/필요이론.md
@@ -37,6 +37,20 @@ IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
 페이지 소스 볼 때 한글이 깨지지 않도록 css 파일에서 가장 상단에 적어줌<br>
 <br><br>
 
+
+🍕 이미지 스프라이트<br>
+```css
+.img_sprite {
+	width: 60px;
+	height: 60px;
+	background: url(../img/icon.png) no-repeat -60px -60px;
+}
+```
+가로세로(w,h) 60px 사이즈 안에 icon.png의 좌상단(top, left)으로부터 60px 떨어진 부분의 이미지를 넣음<br>
+즉, icon.png의 가로세로 60px~120px 부분을 보여주게 됨<br>
+<br><br>
+
+
 🍕 `>`<br>
 바로 밑에 있는 자식만 사용할 때 사용<br>
 `.nav div {}` : nav 밑 div의 div등 모든 후손 div 선택<br>
@@ -49,6 +63,17 @@ IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
 ③ float을 사용한 상위 박스한테` overflow: hidden;`을 사용 --> 제일 많이 사용하는 방법<br>
 ④ clearfix 사용 --> 제일 best. 반응형에서 사용<br>
 ⇒ `float: left;`를 사용했으면 부모한테 `overflow: hidden;`을 주는 습관을 가질 것<br>	
+<br><br>
+
+🍕 텍스트 한 줄로 제한두기<br>
+```css
+ul li {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+```
+한줄을 넘어가는 텍스트는 ... 처리 돼 생략<br>
 <br><br>
 
 ## JQuery
