21-22 마우스 오버효과

--- a/필요이론.md
+++ b/필요이론.md
@@ -76,6 +76,12 @@ ul li {
 한줄을 넘어가는 텍스트는 ... 처리 돼 생략<br>
 <br><br>
 
+🍕 브라우저에 따른 child 적용<br>
+`div:last-child { }` :  ie9부터 사용 가능<br>
+따로 클래스 명을 지정해서 `div.클래스명 { }` : ie8 아래도 사용 가능 (=모든 브라우저 적용)<br>
+프로젝트를 진행하면서는 거의 둘 다 작성<br>
+<br><br>
+
 ## JQuery
 
 🍕 <br>
