--- a/필요이론.md
+++ b/필요이론.md
@@ -27,7 +27,14 @@ IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
 
 ## HTML
 
-🍕 <br>
+🍕 `<em>` / `<strong>`<br>
+물리적 태그 : 특별한 의미없이 모양만을 결정하는 태그<br>
+논리적 태그 : 태그 자체가 의미를 가져서 출력 형태보다 의미가 중요한 태그<br>
+`<b>` : 물리적 태그. 단순히 구별을 위해 굵은 글씨로 표시<br>
+`<i>` : 물리적 태그. 단순히 구별을 위해 글자를 이탤릭체로 표시<br>
+`<em>` : 논리적 태그. 강조하고 싶은 텍스트에 사용. 주로 이탤릭체로 표시<br>
+`<strong>` : 논리적 태그. 중요성을 강조하고 싶은 텍스트에 사용. `<em>`보다 의미가 더 강함. 주로 굵은 글씨로 표시<br>
+=> 중요한 의미나 강하게 강조할 때 `<strong>`, 그냥 글씨를 강조하고 싶을 때 `<em>`<br> 
 <br><br>
 
 
@@ -81,6 +88,18 @@ ul li {
 따로 클래스 명을 지정해서 `div.클래스명 { }` : ie8 아래도 사용 가능 (=모든 브라우저 적용)<br>
 프로젝트를 진행하면서는 거의 둘 다 작성<br>
 <br><br>
+
+🍕 콘텐츠 요소를 보이지 않게 하는 방법<br>
+① `display: none;` (<-> `display: block;`) (영역이 사라짐. 공백X)<br>
+② `visibility: hidden;` (<-> `visibility: visible;`) (영역은 유지함. 공백O)<br>
+③ `opacity: 0;` (<-> `opacity: 1;`) (영역은 유지함. 공백O)<br>
+④ `width: 0; height: 0; overflow: hidden;`<br>
+<br><br>
+
+🍕 `margin-right: -1px;`<br>
+(tab 메뉴 등에서) 붙어있는 서로 다른 개체에 border값을 줬을 때 이어지는 박스처럼 보이는 것이 아닌 사이에 간격이 있는 것 처럼(한 줄이 아닌 두 줄 처럼) 보일 때 이를 수정하기 위해 사용<br>
+<br><br>
+
 
 ## JQuery
 
