29-30 전체 메뉴 & 배너 스크립트

--- a/필요이론.md
+++ b/필요이론.md
@@ -101,15 +101,30 @@ ul li {
 <br><br>
 
 
-## JQuery
+## jQuery
 
-🍕 <br>
+🍕 jQuery Setting <br>
+jQuery: JavaScript를 사용하기 어려움을 겪는 사람들을 위해 조작 단순화를 제공하는 라이브러리<br>
+[jQuery.com](https://jquery.com/) > [Google CDN](https://developers.google.com/speed/libraries#jquery) 에서 스크립트 가져와 연동<br>
+```html
+<!-- script -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+```
+<br><br>
+
+🍕 jQuery 와 CSS <br>
+```js
+$("#cont_nav").css("display","block");
+// #cont_nav {display: block;}
+```
+id, class 명을 표현하는 방법과 같이 공통되는 부분이 있기 때문에 적절히 활용<br>
 <br><br>
 
 
 ## JS
 
-🍕 <br>
+🍕 `e.preventDefault();` <br>
+이전 상태를 기억하는 명령어<br>
 <br><br>
 
 
