--- a/필요이론.md
+++ b/필요이론.md
@@ -27,6 +27,11 @@ IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
 
 ## HTML
 
+🍕 아웃라이너<br>
+[https://gsnedders.html5.org/outliner/](https://gsnedders.html5.org/outliner/)<br>
+html로 기본 레이아웃 잡을 때 참고하는 사이트<br>
+<br><br>
+
 🍕 `<em>` / `<strong>`<br>
 물리적 태그 : 특별한 의미없이 모양만을 결정하는 태그<br>
 논리적 태그 : 태그 자체가 의미를 가져서 출력 형태보다 의미가 중요한 태그<br>
@@ -42,6 +47,20 @@ IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
 
 🍕 `@charset "utf-8"`<br>
 페이지 소스 볼 때 한글이 깨지지 않도록 css 파일에서 가장 상단에 적어줌<br>
+<br><br>
+
+🍕 box-shadow<br>
+참고링크 [https://webzz.tistory.com/420](https://webzz.tistory.com/420)
+CSS3 (IE9부터 지원) 속성 중 하나로 그림자를 안/밖 나눠 지정할 수 있기 때문에 색상 전환 등의 효과에도 사용함<br>
+```css
+h1 {transition: box-shadow 0.25s ease-in-out;}
+h1:hover {
+	box-shadow: inset -9em 0 0 0 #257fac,
+	            inset 9em 0 0 0 #257fac;
+}
+```
+h1에 마우스 올렸을 경우 양쪽을 기준으로(9em, -9em) 안쪽(inset)색상이 스크롤처럼 덮히는 효과(ease-in-out)이 적용됨<br>
+![box-shadow](./img/box-shadow.gif) <br>
 <br><br>
 
 
