--- a/필요이론.md
+++ b/필요이론.md
@@ -24,6 +24,21 @@ IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
 이미지 스프라이트 : 하나의 png 파일에 로고나 아이콘 같은 이미지들을 생성. 그 하나의 png 파일만 사용하며 position을 줘서 각각 불러옴<br>
 <br><br>
 
+🍕 font-awesome 아이콘 사용 방법<br>
+① (일반적) 제공하는 i태그 복사해서 html 파일에 붙여넣기<br>
+② (css로 컨트롤하기) 페이지 검사로 들어가 ::before에 입력된 번호 확인<br>
+css파일에 들어가서 가상선택자 before 만들어주고 content에 번호 입력하기<br>
+```css
+.slick-prev { 
+	font: normal normal normal 14px/1 FontAwesome;
+}
+.slick-prev::before {
+	content: "\f105";
+	color: #ffffff;
+}
+```
+<br><br>
+
 
 ## HTML
 
@@ -50,16 +65,16 @@ html로 기본 레이아웃 잡을 때 참고하는 사이트<br>
 <br><br>
 
 🍕 box-shadow<br>
-참고링크 [https://webzz.tistory.com/420](https://webzz.tistory.com/420)
+참고링크 [https://webzz.tistory.com/420](https://webzz.tistory.com/420)<br>
 CSS3 (IE9부터 지원) 속성 중 하나로 그림자를 안/밖 나눠 지정할 수 있기 때문에 색상 전환 등의 효과에도 사용함<br>
+ex) h1에 마우스 올렸을 경우 색상 변경<br>
 ```css
-h1 {transition: box-shadow 0.25s ease-in-out;}
+h1 {transition: box-shadow 0.25s ease-in-out;} /* 스크롤처럼 덮히게(ease-in-out) */ 
 h1:hover {
-	box-shadow: inset -9em 0 0 0 #257fac,
-	            inset 9em 0 0 0 #257fac;
+	box-shadow: inset -9em 0 0 0 #257fac, /* 안쪽(inset) -9em 지점부터(왼쪽부터) 색상 전환 */
+	            inset 9em 0 0 0 #257fac;  /* 안쪽 9em 지점부터(오른쪽부터) 색상 전환 */
 }
 ```
-h1에 마우스 올렸을 경우 양쪽을 기준으로(9em, -9em) 안쪽(inset)색상이 스크롤처럼 덮히는 효과(ease-in-out)이 적용됨<br>
 ![box-shadow](./img/box-shadow.gif) <br>
 <br><br>
 
