28 라이트박스

--- a/필요이론.md
+++ b/필요이론.md
@@ -102,8 +102,15 @@ h1:hover {
 ① 깨지는 영역에 똑같이 float; left를 사용  --> 모든 박스에 float:left를 써줘야해서 비추<br>
 ② float의 성질을 차단하는 `clear: both;`를 사용 --> 어떤 영역이 깨졌는지 찾기 어려워서 비추<br>
 ③ float을 사용한 상위 박스한테` overflow: hidden;`을 사용 --> 제일 많이 사용하는 방법<br>
-④ clearfix 사용 --> 제일 best. 반응형에서 사용<br>
-⇒ `float: left;`를 사용했으면 부모한테 `overflow: hidden;`을 주는 습관을 가질 것<br>	
+④ **clearfix 사용** --> 제일 best. 반응형에서 사용<br>
+```css
+/* clearfix */
+.clearfix {*zoom:1;} /* IE7 아래도 지원 */
+.clearfix:before, .clearfix:after {display: block; content: ''; line-height: 0;}
+.clearfix:after {clear: both;} /* float의 성질 차단 */
+```
+⇒ `float: left;`를 사용했으면 부모한테 `overflow: hidden;`을 주는 습관을 가질 것<br>
+==> 더 나아가서는 clearfix 이용에 길들여질 것<br> 	
 <br><br>
 
 🍕 텍스트 한 줄로 제한두기<br>
