--- a/필요이론.md
+++ b/필요이론.md
@@ -178,6 +178,12 @@ id, class 명을 표현하는 방법과 같이 공통되는 부분이 있기 때
 
 🍕 `e.preventDefault();` <br>
 이전 상태를 기억하는 명령어<br>
+```js
+$(".btn").click(function(e){
+	e.preventDefault();
+});
+```
+click 이벤트를 실행했을 때 스크롤이 맨 위로 올라가게 되는 현상을 막는데에도 사용<br>
 <br><br>
 
 
