--- a/필요이론.md
+++ b/필요이론.md
@@ -113,10 +113,17 @@ h1:hover {
 <br><br>
 
 🍕 `float: left;`로 인한 영역깨짐(height:0) 방지법<br>
-① 깨지는 영역에 똑같이 float; left를 사용  --> 모든 박스에 float:left를 써줘야해서 비추<br>
-② float의 성질을 차단하는 `clear: both;`를 사용 --> 어떤 영역이 깨졌는지 찾기 어려워서 비추<br>
-③ float을 사용한 상위 박스한테` overflow: hidden;`을 사용 --> 제일 많이 사용하는 방법<br>
-④ **clearfix 사용** --> 제일 best. 반응형에서 사용<br>
+한 줄에 자기만 있고 싶은 block구조를 오른쪽 정렬 시켜주기 위해서는 float을 사용하게 됨<br>
+하지만 float을 사용할 경우 상위 박스의 height값이 0으로 설정, 즉 영역이 사라지게됨<br>
+이를 해결하기 위해 height 값을 인식할 수 있도록 해줘야 함<br>
+① 깨지는 영역에 똑같이 float; left를 사용<br>
+--> 계속적으로 모든 박스에 float:left를 써줘야해서 비추<br>
+② float의 성질을 차단하는 `clear: both;`를 사용<br>
+--> 레이아웃이 복잡해지면 어떤 영역이 깨졌는지 찾기 어려워서 비추<br>
+③ float을 사용한 상위 박스한테 **overflow: hidden;** 을 사용<br>
+--> overflow의 원래 기능에서 벗어나지만 제일 많이 사용하는 방법 (가끔씩 추천). 단, 2단 메뉴부분이나 드롭다운 메뉴와 같이 하위 메뉴가 있는 경우에서는 사용하지 못함<br>
+④ **clearfix** 사용<br>
+--> 가상으로 영역을 만들어 height값을 인식하도록 함. 제일 best. 반응형에서 사용<br>
 ```css
 /* clearfix */
 .clearfix {*zoom:1;} /* IE7 아래도 지원 */
