--- a/필요이론.md
+++ b/필요이론.md
@@ -16,12 +16,34 @@
 [https://fonts.google.com/](https://fonts.google.com/)<br>
 <br><br>
 
-🍕 이미지를 표현하는 방법<br>
+🍕🍕🍕 이미지를 표현하는 방법<br>
 ① img 태그로 표현 (의미가 있을 때) / alt 태그 - 대체 문자 표현<br>
-② background 속성으로 표현 (의미가 없을 때) - 대체 문자 X<br>
-③ 이미지를 background 속성 - 대신에 웹 표준을 준수하기 위해서 조건이 추가 : 가상으로 대체롤 문자를 만들어줌(IR 효과) + 이미지 스프라이트 효과<br>
-IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법<br>
-이미지 스프라이트 : 하나의 png 파일에 로고나 아이콘 같은 이미지들을 생성. 그 하나의 png 파일만 사용하며 position을 줘서 각각 불러옴<br>
+② background 속성으로 표현 (의미가 없을 때) - 대체 문자 X - 웹 표준 준수X<br>
+③ background 속성으로 표현하면서 대체 문자를 사용 : **IR효과 + 이미지 스프라이트 효과**<br>
+<br>
+🍕 IR효과 : 이미지 대체텍스트 제공을 위한 CSS 기법. 가상으로 대체롤 문자를 만들어줌<br>
+IR효과의 기법 3가지 : Phark Method / WA IR / Screen Out <br>
+```css
+/* Phark Method : 의미있는 이미지의 대체 텍스트를 제공하는 경우 */
+.ir_pm {display: block; overflow: hidden; font-size: 0; line-height: 0; text-indent: -9999px;}
+/* WA IR : 의미있는 이미지의 대체 텍스트로 이미지가 없어도 대체 텍스트를 보여주고자 할 때 */
+.ir_wa {display: block; overflow: hidden; position: relative; z-index: -1; width: 100%; height: 100%;} 
+/* Screen Out : 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
+.ir_so {overflow: hidden; position: absolute; width: 0; height: 0; line-height: 0; text-indent: -9999px;}
+```
+<br>
+🍕 이미지 스프라이트 : 하나의 png 파일에 로고나 아이콘 같은 이미지들을 생성. 그 하나의 png 파일만 사용하며 position을 줘서 각각 불러옴 <br>
+
+```css
+.img_sprite {
+	width: 60px; 
+	height: 60px; /* 가로세로 60px 사이즈 공간 안에(=이미지크기) */
+	background: url(../img/icon.png) no-repeat -60px -60px;
+	/* 좌상단(top,left)으로부터 60px 떨어진 부분의 이미지를 넣음 */
+	/* 즉, icon.png의 가로세로 60px~120px 부분을 보여주게 됨 */
+}
+```
+이미지 스프라이트 좌표 찾기에 유용한 사이트 : [spritecow](http://www.spritecow.com/) <br>
 <br><br>
 
 🍕 font-awesome 아이콘 사용 방법<br>
@@ -91,20 +113,6 @@ h1:hover {
 ```
 ![box-shadow](./img/box-shadow.gif) <br>
 <br><br>
-
-
-🍕 이미지 스프라이트<br>
-```css
-.img_sprite {
-	width: 60px;
-	height: 60px;
-	background: url(../img/icon.png) no-repeat -60px -60px;
-}
-```
-가로세로(w,h) 60px 사이즈 안에 icon.png의 좌상단(top, left)으로부터 60px 떨어진 부분의 이미지를 넣음<br>
-즉, icon.png의 가로세로 60px~120px 부분을 보여주게 됨<br>
-<br><br>
-
 
 🍕 `>`<br>
 바로 밑에 있는 자식만 사용할 때 사용<br>
