04 헤더 반응형 : 모바일 메뉴

--- a/필요이론.md
+++ b/필요이론.md
@@ -170,6 +170,66 @@ ul li {
 (tab 메뉴 등에서) 붙어있는 서로 다른 개체에 border값을 줬을 때 이어지는 박스처럼 보이는 것이 아닌 사이에 간격이 있는 것 처럼(한 줄이 아닌 두 줄 처럼) 보일 때 이를 수정하기 위해 사용<br>
 <br><br>
 
+🍕 햄버거 메뉴 (모바일 메뉴)<br>
+html에서 구조를 잡은 뒤 css에서 가상선택자를 이용해 3개의 막대기와 손가락 터치 영역 크기를 지정<br>
+햄버거 메뉴는 주로 반응형 웹페이지에서 모바일 크기로 줄어들었을 때 등장함. 따라서 display:none -> block으로 전환이 필요<br>
+```html
+<nav id="mNav">
+	<h2 class="ir_so">메가박스 전체메뉴</h2>
+	<a href="#" class="ham"><span></span></a>
+</nav>
+```
+```css
+/* 레이아웃 */
+#mNav {display: none; position: absolute; top: 10px; right: 14px;}
+
+/* 모바일 메뉴 */
+.ham {display: block; width: 25px; height: 10px; background: rgba(0,0,0,0.4); padding: 15px 10px 10px 10px;} /* 손가락 터치하는 영역 크기 지정 (=햄버거 주위로 조금 더 크게) */
+.ham span {position: relative; display: block; width: 25px; height: 4px; background: #39106a;} /* 가운데 막대기 */
+.ham span:before {
+    content: '';
+    width: 25px; height: 4px; background: #39106a;
+    position: absolute; left: 0; bottom: -7px;
+} /* 아래 막대기 */
+.ham span:after {
+    content: '';
+    width: 25px; height: 4px; background: #39106a;
+    position: absolute; left: 0; top: -7px;
+} /* 윗 막대기 */
+
+/* 미디어 쿼리 */
+@media (max-width: 1024px) {
+    #mNav {display: block;}
+}
+```
+![hamburger-menu](./img/hamburger.PNG) <br>
+<br><br>
+
+🍕🍕🍕 Media Query<br>
+반응형 웹 페이지를 제작하기 위해서 사용하는 viewport 와 media query<br>
+viewport : PC 화면 비율을 모바일 비율로 바꿔줌<br>
+media query : 화면 크기에 따라 CSS를 제작함<br>
+media query 적용 방법<br>
+① 외부 링크 사용 `<link rel="stylesheet" href="style.css"/>` (주로 사용) <br>
+② 화면 크기별로 CSS 작성 `<link rel="stylesheet" media="all and (min-width:280px)" href="style.css"/>` <br>
+③ import 시키기 `@import url(style.css) all and (min-width: 380px);`<br>
+<br>
+```css
+/* @media [only/not] [media type] [and/.] (조건문) {실행문} */
+
+/* min을 사용한다면 */
+@media (min-width: 380px){실행문}
+@media (min-width: 768px){실행문}
+@media (min-width: 960px){실행문}
+@media (min-width: 1280px){실행문}
+/* max를 사용한다면 */
+@media (max-width: 1280px){실행문}
+@media (max-width: 960px){실행문}
+@media (max-width: 768px){실행문}
+@media (max-width: 380px){실행문}
+```
+<br><br>
+
 
 ## jQuery
 
