--- a/필요이론.md
+++ b/필요이론.md
@@ -287,6 +287,12 @@ if(Modernizr.canvas){
 공식 홈페이지랑 깃헙에 적힌 공식 문서를 위주로 활용 방법 익히기<br>
 <br><br>
 
+🍕 swiper.js <br>
+[swiper.js](https://swiperjs.com/) / [swiper.js Github](https://github.com/nolimits4web/swiper)<br>
+슬라이드 표현을 위해 자주 사용하는 플러그인 swiper.js<br>
+공식 홈페이지랑 깃헙에 적힌 공식 문서를 위주로 활용 방법 익히기<br>
+<br><br>
+
 🍕 lightGallery.js <br>
 [lightGallery.js](https://sachinchoolur.github.io/lightGallery/) / [lightGallery.js Github](https://github.com/sachinchoolur/lightGallery)<br>
 이미지 갤러리를 따로 표현해주는 플러그인 lightGallery.js<br>
