09 영화 차트 이미지 슬라이드

--- a/필요이론.md
+++ b/필요이론.md
@@ -129,6 +129,25 @@ html로 기본 레이아웃 잡을 때 참고하는 사이트<br>
 페이지 소스 볼 때 한글이 깨지지 않도록 css 파일에서 가장 상단에 적어줌<br>
 <br><br>
 
+🍕🍕🍕 box-model<br>
+![box-model](./img/box-model.png)<br>
+웹 페이지에서 요소를 구성하는 가장 기본적인 것은 영역. 각 태그의 영역은 box-model로 구성됨<br>
+- content : 글씨가 삽입되는 영역<br>
+- border : 테두리 영역<br>
+- padding : content와 border 사이 안쪽 여백<br>
+- margin : border와 다른 캐그 영역 사이 바깥 여백<br>
+<br><br>
+
+🍕 box-sizing<br>
+모든 요소는 margin, border, padding 값을 가지고 있음. 즉, width값과 height값을 가지고 있음<br>
+그래서 요소의 가로 값과 세로 값은 **width(height) = margin + padding + border** 이며 이것은 default값인 `box-sizing: content-box;`와 동일함<br>
+ex) width: 50px; margin: 20px; padding: 10px; border: 1px;<br>
+=> 50 + 20x2 + 10x2 + 1x2 = 112px<br>
+여기서 만약 `box-sizing: border-box;` 라고 설정할 경우에는 padding값과 border값을 포함하지 않기 때문에  **width(height) = margin** 으로 적용됨<br>
+ex) width: 50px; margin: 20px; padding: 10px; border: 1px;<br>
+=> 50 + 20x2 = 90px<br>
+<br><br>
+
 🍕 box-shadow<br>
 참고링크 [https://webzz.tistory.com/420](https://webzz.tistory.com/420)<br>
 CSS3 (IE9부터 지원) 속성 중 하나로 그림자를 안/밖 나눠 지정할 수 있기 때문에 색상 전환 등의 효과에도 사용함<br>
