13 새로운 영화 영역1

--- a/필요이론.md
+++ b/필요이론.md
@@ -118,7 +118,7 @@ html로 기본 레이아웃 잡을 때 참고하는 사이트<br>
 ```
 => `<img>` 태그의 `srcset` 속성을 이용하면 화면크기 및 해상도에 따라 이미지 표현이 가능함<br>
 ```html
-<img src="경로/img.jpg" srcset="경로/img@2" alt="이미지">```
+<img src="경로/img.jpg" srcset="경로/img@2" alt="이미지">
 ```
 <br><br>
 
@@ -141,11 +141,9 @@ html로 기본 레이아웃 잡을 때 참고하는 사이트<br>
 🍕 box-sizing<br>
 모든 요소는 margin, border, padding 값을 가지고 있음. 즉, width값과 height값을 가지고 있음<br>
 그래서 요소의 가로 값과 세로 값은 **width(height) = margin + padding + border** 이며 이것은 default값인 `box-sizing: content-box;`와 동일함<br>
-ex) width: 50px; margin: 20px; padding: 10px; border: 1px;<br>
-=> 50 + 20x2 + 10x2 + 1x2 = 112px<br>
-여기서 만약 `box-sizing: border-box;` 라고 설정할 경우에는 padding값과 border값을 포함하지 않기 때문에  **width(height) = margin** 으로 적용됨<br>
-ex) width: 50px; margin: 20px; padding: 10px; border: 1px;<br>
-=> 50 + 20x2 = 90px<br>
+ex) width: 50px; margin: 20px; padding: 10px; border: 1px; => 50 + 20x2 + 10x2 + 1x2 = 112px<br>
+이 때, `box-sizing: border-box;` 라고 설정할 경우에는 padding값과 border값을 포함하지 않기 때문에  **width(height) = margin** 으로 적용됨<br>
+ex) width: 50px; margin: 20px; padding: 10px; border: 1px; => 50 + 20x2 = 90px<br>
 <br><br>
 
 🍕 box-shadow<br>
@@ -293,6 +291,30 @@ media query 적용 방법<br>
 ```
 <br><br>
 
+🍕 반응형 div 활용 1 <br>
+```html
+<div class="box">
+	<div class="box_left"></div>
+	<div class="box_right"></div>
+</div>
+```
+![relative-div](./img/relativediv.gif) <br>
+좌우로 두개의 div를 갖고 있을 때 반응형 작동 시 오른쪽 div는 길이를 유지하고 왼쪽 div는 길이가 변화하도록 하는 방법<br>
+```css
+.box {position: relative;}
+.box .box_left { /* 가변 */
+	margin-right: 423px; /* 오른쪽 div를 넣을 만큼 margin 지정해서 비움 */ /* width 지정 별도로 하지 않음 */
+	height: 500px;
+	background: #ccc url(../img/new01.jpg) center top; background-size: cover;
+	/* 줄어들 때 이미지도 가운데를 유지하도록 background-position을 centop top으로 지정 */
+}
+.box .box_right { /* 고정 */
+	position: absolute; right: 0; top: 0px; /* absolute 이용해서 처음부터 고정 위치(pixel) 조정 */
+	width: 400px; height: 500px; /* width를 pixel로 지정 */
+	background: #f0f0f0;
+}
+```
+<br><br>
 
 ## jQuery
 
