18 헬프영역 반응형

--- a/필요이론.md
+++ b/필요이론.md
@@ -197,6 +197,15 @@ ul li {
 }
 ```
 한줄을 넘어가는 텍스트는 ... 처리 돼 생략<br>
+```css
+ul li {
+	overflow: hidden; text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+}
+```
+두 줄 이상을 말줄임표로 줄이는 방법은 한 줄 방법과 조금 다름<br>
 <br><br>
 
 🍕 브라우저에 따른 child 적용<br>
