--- a/필요이론.md
+++ b/필요이론.md
@@ -400,10 +400,65 @@ $(".btn").click(function(e){
 	e.preventDefault();
 });
 ```
-click 이벤트를 실행했을 때 스크롤이 맨 위로 올라가게 되는 현상을 막는데에도 사용<br>
+click 이벤트를 실행했을 때 스크롤이 맨 위로 올라가게 되는 현상(`<a href="#">`)을 막는데에도 사용<br>
 <br><br>
 
+🍕🍕🍕 탭메뉴 만들기<br>
+```html
+<div class="notice">
+	<ul>
+		<li class="active"><a href="#">공지1</a>
+			<ul><li> ... </li><li> ... </li><li> ... </li></ul>
+		</li>
+		<li><a href="#">공지2</a>
+			<ul><li> ... </li><li> ... </li><li> ... </li></ul>
+		</li>
+	</ul>
+</div>
+```
+```css
+.notice ul li a {border: 1px solid #000; background: #f5f5f5;}
+.notice ul li.active a {background: #fff;}
+```
+js를 적용하기 전 구조만 잡을 때에는 active가 아닌 li에는 `<li style="display:none;">` 으로 스타일을 지정해줘서 하나만 보이고 나머지들은 눈에 안보이게 해서 작업하는 것이 구조가 안정적임<br> 
+<br>
+스크립트 짜는 방법 1
+```js
+var tabMenu = $(".notice"); // 기준점 설정
 
+tabMenu.find("ul > li > ul").hide();
+tabMenu.find("ul > li.active > ul").show(); // 기본적으로 active가 붙어있는 공지1만 눈에 보이도록
 
+var menuBtn = $(".notice > ul > li");
+var menuCont = $(".notice > ul > li > ul");
 
+menuBtn.click(function(e){
+    e.preventDefault(); // 스크롤 움직임 방지
+    var target = $(this); // 클릭한 것을 타겟으로
+    var index = target.index(); // 타겟의 순서를 저장
+    /* alert(index); */
+    menuBtn.removeClass("active"); // 전체에 active 지우기
+    target.addClass("active"); // 그 중 클릭한 타겟에는 active 넣어주기
+    menuCont.css("display","none"); // 전체를 눈에 안보이도록
+    menuCont.eq(index).css("display","block"); // 그 중 클릭한 타겟은 눈에 보이도록
+});
+```
+스크립트 짜는 방법 2 - 웹 표준 준수
+```js
+var tabMenu = $(".notice"); // 기준점 설정
 
+tabMenu.find("ul > li > ul").hide();
+tabMenu.find("ul > li.active > ul").show(); // 기본적으로 active가 붙어있는 공지1만 눈에 보이도록
+
+function tabList(e){
+    e.preventDefault();
+    var target = $(this);
+	target.next().show().parent("li").addClass("active").siblings("li").removeClass("active").find("ul").hide();
+    // 버튼(a)을 클릭하면 옆에 있는 형제(ul)를 보여주고
+    // 형제의 부모(li)를 찾아 클래스에 active를 추가
+    // 부모(li)의 형제(다른 li)를 찾아 클래스에 active를 제거
+    // 부모의 형제(다른 li)의 자식(ul)을 찾아 숨김
+}
+
+tabMenu.find("ul > li > a").click(tabList).focus(tabList); // a(버튼)를 찾아 누르고 tabList 함수 실행
+```
